# stat-mech

./: .gitignore  README.md  magnetisation-surface-for-double-spin-interaction-J_-1-T0.01-10-temp.html  magnetisation.md  magnetisation.rst  pyproject.toml
magnetisation/: README.md  magnetisation-surface-for-double-spin-interaction-J_-1-T0.01-10-temp.html  magnetisation-surface-for-double-spin-interaction-J_-1-T0.01-1000-inverse_temp.html  magnetism.py
